--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^15.2.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "unsplash-js": "^7.0.15",
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.3",
+    "@types/file-saver": "^2.0.5",
     "typescript": "~4.9.5"
   }
 }
